<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dbActivity">

    <EditText
        android:id="@+id/codigo"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/Codigo"
        android:inputType="textPersonName"
        android:text="Codigo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/BtRegistrar"
        android:onClick="Salvar"
        android:text="Salvar"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigo" />

    <Button
        android:id="@+id/btnAsignar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/BtModificar"
        android:text="Asignar"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisponibilidad"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/btnDisponibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/BtBuscar"
        android:onClick="Disponible"
        android:text="Disponibilidad"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvar"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/BtEliminar"
        android:text="Eliminar"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAsignar"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigo"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/disponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Disponible"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>